--- a/style.css
+++ b/style.css
@@ -36,3 +36,48 @@ body {
     overflow: hidden;
 }
 
+.filmSection{
+    height: 100vh;
+    width:200vw;
+    position: absolute;
+}
+
+#about {
+    height: 100vh;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.filmCover {
+    width:100vw;
+    position: relative;
+}
+.filmCover img {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+}
+
+.filmDescription { 
+    width: 25vw; 
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 40vh 10vw 0 0 
+    
+}
+
+.filmView {
+    position: relative;
+}
+
+.filmView a {
+    position: absolute;
+}
+
+.section{
+    margin:0px;
+    bottom:0px;
+    width:4000px;
+    float:left;
+    height:100%;
+}
