Side scroll implemented + updated showreel

--- a/style.css
+++ b/style.css
@@ -35,18 +35,38 @@ body {
     height: 100vh;
     overflow: hidden;
 }
-
-.filmSection{
-    height: 100vh;
-    width:200vw;
-    position: absolute;
-}
-
 #about {
     height: 100vh;
     margin-left: 5%;
     margin-right: 5%;
 }
+
+.filmSection{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    overflow: hidden;
+
+}
+
+.slides{
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+}
+.slides > div {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    transition: transform 0.5s;
+    position: relative;
+    
+    display: flex;
+
+  }
+
+
 .filmCover {
     width:100vw;
     position: relative;
@@ -55,6 +75,7 @@ body {
     height: 100vh;
     width: 100%;
     object-fit: cover;
+    
 }
 
 .filmDescription { 
@@ -68,16 +89,10 @@ body {
 
 .filmView {
     position: relative;
+    width: 100vw;
 }
 
 .filmView a {
     position: absolute;
 }
 
-.section{
-    margin:0px;
-    bottom:0px;
-    width:4000px;
-    float:left;
-    height:100%;
-}
