--- a/style.css
+++ b/style.css
@@ -41,16 +41,18 @@ body {
     width: 100%;
 }
 
-
+.showreelContainer{
+    width: 100vw;
+}
 
 #showreel{
     z-index: -1;
     position: absolute;
     top: 0;
-    object-fit: cover;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    object-fit: cover;
+    /* overflow: hidden; */
 }
 div.spacer{
     height:calc(50vh - 50px);
@@ -90,9 +92,10 @@ div.sticky {
 
 .filmSection{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     /* position: absolute; */
     overflow: hidden;
+  
 
 }
 
@@ -174,11 +177,11 @@ div.sticky {
 }
 
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
     .workTwoColumn {
         -webkit-column-count: 1;
         -moz-column-count: 1;
         column-count: 1;
     }
 
-}
+} */
