--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@ body {
     width: 100%;
 }
 
+.downArrow {
+    width: 20px;
+    height: 20px;
+    border: solid white;
+    border-width: 0 1px 1px 0;
+    position: absolute;
+    left: 50%;
+    margin-left: -10px;
+    bottom: 30px;
+    -webkit-transform: rotate(45deg);
+}
 .showreelContainer{
     width: 100vw;
 }
@@ -152,7 +163,7 @@ div.sticky {
     position: absolute;
     right: 0px;
     top: 0px;
-    padding: 40vh 10vw 0 0 
+    padding: 40vh 10vw 0 0 ;
     
 }
 
