--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ div.sticky {
 }
 #about {
     position: relative;
-    height: 100vh;
+    height: 100%;
     margin-left: 5%;
     margin-right: 5%;
     padding: 10vh 0 10vh 0;   
@@ -155,6 +155,7 @@ div.sticky {
     height: 100vh;
     width: 100vw;
     object-fit: cover;
+    
     
 }
 
