--- a/style.css
+++ b/style.css
@@ -151,14 +151,24 @@ div.sticky {
     width:100vw;
     position: relative;
 }
-.filmCover img {
+.filmCoverImage{
     height: 100vh;
     width: 100vw;
     object-fit: cover;
     
     
 }
-
+.award{
+    position: absolute;
+    width: 15vw;
+    height: 15vw;
+    object-fit: contain;
+    top: 30%;
+    left: 10%;
+    /* margin-top: -10px; */
+    /* bottom: 30px; */
+    
+}
 .filmDescription { 
     width: 25vw; 
     position: absolute;
