Colour of banner
changed from red to black for fix with safari opacity

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     width: 100vw;
     z-index: 100;
     /* background-color: tomato; */
-    background-image: linear-gradient(to bottom, rgba(27, 26, 26, 0.699) ,rgba(255,0,0,0));
+    background-image: linear-gradient(to bottom, rgba(27, 26, 26, 0.699) ,rgba(0, 0, 0, 0));
 }
 #navBarLarge{
     
