--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ div.sticky {
 }
 
 
-@media screen and ( max-width: 800px ) {
+@media ( max-width: 800px ) {
     #navBarSmall { display:flex; }
     #navBarLarge { display:none; }
     div.sticky { z-index: 99;}
@@ -246,7 +246,7 @@ div.sticky {
     .filmDescription {
         margin-right: 5vw;
         width: 40vw;
-        
+
      }
 
 }
