--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ div.sticky {
 }
 #about {
     position: relative;
-    height: 100%;
+    height: 100vh;
     margin-left: 5%;
     margin-right: 5%;
     padding: 15vh 0 15vh 0;   
@@ -244,7 +244,7 @@ div.sticky {
         object-position: -50vw 0;
     }
     .filmDescription {
-        margin-right: 5vw;
+        /* margin-right: 0vw; */
         width: 40vw;
 
      }
