--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ div.sticky {
 .filmSection{
     height: 100vh;
     width: 100%;
+    margin-top: 10vh;
     /* position: absolute; */
     overflow: hidden;
   
