--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     font-family: quicksand;
     font-weight: lighter;
     margin: 0;
+    
+}
+
+body h1,h2{
+    text-align: center;
 }
 
 #navBarContainer{
@@ -227,6 +232,79 @@ div.sticky {
 .player {
     width: 100vw; 
     height: 100%;
+}
+
+.filmCarousel {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+    height:100vh;
+    padding: 10vh 10vw 10vh 10vw;
+    
+}
+  
+.filmSlice{
+    height: 80vh;
+    width:25vw;
+    
+    /* width: fit-content; */
+    /* position: relative; */
+    
+}
+.sliceCoverImage{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    
+}
+.popUpFilm{
+    width: 100%;
+    height:
+    /* position: absolute;
+    left: 0; 
+    top: 0; */
+}
+
+.prev-arrow {
+    width: 20px;
+    height: 20px;
+    border: solid white;
+    border-width: 0 1px 1px 0;
+    position: absolute;
+    top: 50%;
+    margin-top: -15px;
+    left: -40px;
+    -webkit-transform: rotate(135deg);
+    background-color: transparent;
+    outline: none;
+}
+
+.next-arrow {
+    width: 20px;
+    height: 20px;
+    border: solid white;
+    border-width: 0 1px 1px 0;
+    position: absolute;
+    top: 50%;
+    margin-top: -15px;
+    right: -40px;
+    -webkit-transform: rotate(-45deg);
+    background-color: transparent;
+    outline: none;
+}
+.cover{
+    position: relative;
+    width:100%;
+}
+.playButton{
+    position: absolute;
+    width: 50%; 
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    opacity: 0.5;
+    object-fit: cover;
 }
 
 
