--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ div.sticky {
     font-size: x-small;
     font-style: italic;
     padding: 2px 0 2px 0;
+    cursor: pointer;
 }
 .backButton{
     width: 20px;
@@ -217,7 +218,12 @@ div.sticky {
     margin-bottom: -10px;
     bottom: 50%;
     -webkit-transform: rotate(45deg);
+    cursor: pointer;
 
+}
+
+#backButton1{
+    bottom:0;
 }
 
 .filmView {
@@ -230,17 +236,37 @@ div.sticky {
 }
 
 .player {
-    width: 100vw; 
+    width: 100%; 
     height: 100%;
 }
 
-.filmCarousel {
-    display: block;
+.filmSlideSmall{
+    width:25vw;
+    position: relative;
+}
+.filmSlideSmall>div{
+    color:black;
+    position: absolute;
+    width: 50%; 
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+
+
+
+/* .filmCarousel {
+    
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     width: 90vw;
     height:100vh;
     padding: 10vh 10vw 10vh 10vw;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
     
 }
   
@@ -248,24 +274,37 @@ div.sticky {
     height: 80vh;
     width:25vw;
     
-    /* width: fit-content; */
-    /* position: relative; */
+
+   
+    position: relative;
     
-}
+} */
 .sliceCoverImage{
-    height: 100%;
-    width: 100%;
+    height: 80vh;
+    width:25vw;
     object-fit: cover;
     
 }
-.popUpFilm{
-    width: 100%;
-    height:
-    /* position: absolute;
-    left: 0; 
-    top: 0; */
-}
 
+.popUpFilmContainer{
+    height: 100%;
+    width: 50vw;
+    /* position: absolute; */
+    
+}
+.popUpFilm{
+    width:100%;
+}
+#playTest{
+    width:100%;
+}
+#playTestContainer{
+    height: 100vh;
+    width: 50vw;
+    margin-top: 10vh;
+    /* position: absolute; */
+    overflow: hidden;
+}
 .prev-arrow {
     width: 20px;
     height: 20px;
