Film slice responsive
now expands on hover

--- a/style.css
+++ b/style.css
@@ -381,9 +381,10 @@ div.sticky {
     #circusCoverImage{
         object-position: -30vw 0;
     }
-    .filmSlideSmall{
+    .filmSlideSmall:hover {
         width: 50vw;
     }
+    
     .popUpFilmContainer{
         height: 100%;
         width: 100vw;
