--- a/style.css
+++ b/style.css
@@ -403,6 +403,12 @@ div.sticky {
     object-fit: cover;
 }
 
+#footerContainer{
+    padding: 5vh 5vw 5vh 5vw;
+    
+
+}
+
 
 @media ( max-width: 800px ) {
     #navBarSmall { 
