--- a/style.css
+++ b/style.css
@@ -407,9 +407,23 @@ div.sticky {
 
 #footerContainer{
     padding: 10vh 5vw 10vh 5vw;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
+    display: flex;
+    /* position: relative; */
+    
+    flex-direction: row;
+    justify-content: space-between;
+}
+#copyrightText{
+    position: relative;
+    width:100%;
+    height:inherit;
+    
+}
+#copyrightText h3{
+    position: absolute;
+    /* top:50%; */
+    /* transform: translate(0,-50%); */
+    
 }
 
 #socialMediaContainer{
