--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body h1,h2,h3{
 
 #navBarLarge a {
     text-decoration: none;
-    font-size: 25px;
+    font-size: 35px;
     line-height: 100px;
     padding-right: 10px;
     color:white;
@@ -51,7 +51,7 @@ body h1,h2,h3{
 
 #navBarSmall a {
     text-decoration: none;
-    font-size: 25px;
+    font-size: 35px;
     line-height: 100px;
     padding-right: 10px;
     color:white;
@@ -230,7 +230,7 @@ div.sticky {
     border-radius: 2px;
     text-decoration: none;
     color: white;
-    font-size: medium;
+    font-size: x-large;
     font-style: normal;
     padding: 5px 5px 5px 5px;
     cursor: pointer;
