removing gross italic font tags

--- a/style.css
+++ b/style.css
@@ -470,9 +470,9 @@ justify-content: space-evenly;
         width: 40vw;
 
      }
-     .filmDescription h3 {
+     /* .filmDescription h3 {
          font-size: small;
-     }
+     } */
 
     
      
